<resources>
    <string name="app_name">My Vodafone</string>
    <string name="app_name2">My Vodafone</string>
    <string name="filter_deeplink">Filter Deep Linking</string>
    <string name="paymentConfirmationInfo">Completează informaţiile de mai jos pentru a-ţi confirma plata facturii</string>
    <string name="paymentConfirmationAmount">Sumă de plată</string>
    <string name="paymentContactNumber">Număr de contact</string>
    <string name="paymentConfirmationCode">Cod plată</string>
    <string name="paymentConfirmationButton">Post</string>
    <string name="paymentConfirmationAmountError">Te rugăm să introduci o valoare mai mare sau egală cu 5, având maxim 2 zecimale.</string>
    <string name="paymentConfirmationCodeError">Codul de operație nu este corect. Te rugăm să contactezi serviciul clienți la *222</string>
    <string name="paymentConfirmationContactError">Formatul numărului introdus nu este valid (ex. 07XXXXXXXX)</string>
    <string name="forgotLabel">Ai uitat\u00A0</string>
    <string name="forgotPasswordText"><u>parola</u>\u00A0</string>
    <string name="forgotUsernameText"><u>numele de utilizator</u>\u00A0?</string>
    <string name="orLabel">sau\u00A0</string>
    <string name="rememberMe">Păstrează-mă autentificat</string>
    <string name="loginToMyVodafone">Autentifică-te în \nMy Vodafone</string>
    <string name="userNameInputLabel">Nume utilizator</string>
    <string name="userNameInputHint">nume utilizator</string>
    <string name="userNameInputLabelRecoverPassword">Nume de utilizator</string>
    <string name="userNameInputHintRecoverPassword">nume de utilizator</string>
    <string name="passwordInputLabel">Parola</string>
    <string name="passwordInputHint">parola</string>
    <string name="loginButtonLabel">Autentificare</string>
    <string name="registerNowButtonLabel">Înregistrează-te acum</string>
    <string name="reset_account_button_label">Reset your account now</string>
    <string name="notRegisteredLabel">Nu ești încă înregistrat cu \nMy Vodafone?</string>
    <string name="login_easier_with_vodafone_label">Te poți autentifica rapid în aplicație dacă ești conectat la rețeaua Vodafone.</string>
    <string name="enter_buton_label">Intră</string>
    <string name="login_with_vdf_network_instead_wifi_label">Deconectează-te de la Wi-Fi pentru a te autentifica folosind rețeaua Vodafone.</string>
    <string name="login_with_vodafone_account_label">Autentifică-te cu un cont Vodafone existent</string>
    <string name="authentication_button_label">Autentificare</string>
    <string name="skip_usual_registration_precess_label">Sari peste procesul de autentificare și înregistrare prin scurta oprire a Wi-Fi-ului și conectându-te la rețeaua Vodafone.</string>
    <string name="vodafone_remember_your_details_label">Nu-ți face griji, va fi necesar să faci asta o singură dată. Aplicația MyVodafone va reține detaliile tale pentru a te autentifica în viitor prin Wi-Fi sau prin rețeaua Vodafone.</string>
    <string name="wifi_settings_button_label">Setări Wi-Fi</string>
    <string name="dont_wont_turn_off_wifi_label">Nu vreau să opresc Wi-Fi</string>
    <string name="register_button_label">Înregistrare</string>
    <string name="invalid_password_message">Ai introdus o parolă greșită.</string>
    <string name="invalid_username_message">Numele de utilizator este incorect.</string>
    <string name="faqs">FAQs</string>
    <string name="chat">Chat</string>
    <string name="requesterId">mcare</string>
    <string name="requesterPassword">mcare</string>
    <string name="title">Bine ai venit în My Vodafone!</string>
    <string name="paybill">Plătește factura</string>
    <string name="clientcode">Cod client:</string>
    <string name="rechargeList">Reîncarcă</string>
    <string name="anuleaza">Anulează</string>
    <string name="costcontrol">Cost Control</string>
    <string name="email">Email</string>
    <string name="internetLeft">Ți-au rămas puține date și mai ai 9 zile până la reînnoirea abonamentului.</string>
    <string name="internetLeftSubTitle">Adaugă una dintre cele două opțiuni pentru a beneficia în continuare de cel mai rapid Internet.</string>
    <string name="da">Da</string>
    <string name="recharge">Reîncarcă cartela</string>
    <string name="server_error">Eroare de server. Te rugăm să încerci mai târziu.</string>
    <string name="internet_connection_problem">Probleme de conectare. Verifică dacă ai acces la Internet din setările telefonului.</string>
    <string name="onboarding_screen_title">My Vodafone</string>
    <string name="onboarding_configuring_text"> </string>
    <string name="dialog_tc">Daca nu ești de acord cu Termenii și Condițiile nu poți accesa aplicația. Ești sigur că vrei să ieși din aplicație?</string>
    <string name="dialog_cancel">Renunţă</string>
    <string name="dialog_give_up">Anulează</string>
    <string name="dialog_continue">Continuă</string>
    <string name="reload_button_label">Reîncearcă</string>
    <string name="oobe_area1">Ai acces la informațiile despre contul tău și Asistență 24/7 și poți verifica viteza și detalierea traficului tău de date.
    Folosim informații din telefonul tău și modul în care folosești aplicația ca să ne ajute să îți oferim oferte și servicii personalizate pentru ca tu să poți profita la maxim de MyVodafone.</string>
    <string name="oobe_area2_title">Calitate și Conectivitate</string>
    <string name="onboarding_right_message_btn">OK</string>
    <string name="onboarding_left_message_btn">Anulează</string>
    <string name="dialog_no_internet_connection_message">Nu s-a putut efectua legatura cu serverul. Te rugăm să te asiguri că ai conexiune la Internet și apoi reîncearcă.</string>
    <string name="dialog_no_internet_connection_positive">Reîncearcă</string>
    <string name="dialog_no_internet_connection_negative">Verifică setările</string>
    <string name="logout_confirmation_label">Ești sigur că vrei să te deconectezi?</string>
    <string name="terms_conditions_error">Pentru a continua trebuie să fii de acord cu termenii și condițiile.</string>
    <string name="item_home">Acasă</string>
    <string name="item_paybill">Plăţi</string>
    <string name="item_services">Serviciile tale</string>
    <string name="item_services_prepaid"> Cost Control </string>
    <string name="item_services_details">Detalii servicii</string>
    <string name="item_services_calls">Detalii apeluri</string>
    <string name="item_offers">Oferte și opțiuni pentru tine.</string>
    <string name="item_offers_prepaid">Promoţii</string>
    <string name="item_offers_postpaid">Promoții și opțiuni</string>
    <string name="item_offers_postpaid1">Oferte pentru tine</string>
    <string name="item_loyalty">Program Loialitate</string>
    <string name="item_bills_and_payments">Plată factură</string>
    <string name="item_billing_overview">Istoric Factură</string>
    <string name="item_traveling_abroad">Roaming</string>
    <string name="item_prepaid_recharge">Reîncarcă</string>
    <string name="item_postpaid_recharge">Reîncărcare</string>
    <string name="item_settings">Setări</string>
    <string name="item_logout">Deconectare</string>
    <string name="item_login">Autentificare</string>
    <string name="item_vodafoneshops">Magazine Vodafone</string>
    <string name="item_your_profile">Profilul tău</string>
    <string name="item_vodafone_tv">Vodafone TV</string>
    <string name="dashboard_postpaid_left_days_until_bill_cycle">Emitere factură în data de %1$s lunar.</string>
    <string name="register_tittle_label">Înregistrare</string>
    <string name="register_first_step_page_tittle_label">Te rugăm să introduci un număr de telefon pentru care dorești să creezi contul</string>
    <string name="register_second_step_page_tittle_label">Te rugăm să introduci datele necesare creării contului</string>
    <string name="register_button_next_step_label">Pasul următor</string>
    <string name="register_input_phone_label">Număr de telefon</string>
    <string name="register_input_username_hint">0xxxxxxxxx</string>
    <string name="register_input_username_label">Nume utilizator</string>
    <string name="register_input_firstname_label">Prenume</string>
    <string name="register_input_firstname_hint">Prenume</string>
    <string name="register_input_lastname_label">Nume</string>
    <string name="register_input_lastname_hint">Nume</string>
    <string name="register_input_email_address_label">Adresă de e-mail</string>
    <string name="register_input_email_address_hint">nume@exemplu.com</string>
    <string name="register_input_terms_and_conditions_label">Sunt de acord cu termenii și condițiile</string>
    <string name="register_input_news_label">Vreau să primesc newsletters de la Vodafone</string>
    <string name="register_input_unique_code_label">Cod unic</string>
    <string name="register_button_resend_code_label">Retrimite codul</string>
    <string name="register_input_contact_phone_label">Număr telefon de contact</string>
    <string name="register_input_contact_phone_hint">0xxxxxxxxx</string>
    <string name="register_third_step_page_tittle_label">Te rugăm să introduci datele necesare creării contului</string>
    <string name="register_input_confirm_password_label">Confirmă parola</string>
    <string name="register_button_create_account_label">Creează cont</string>
    <string name="register_activate_account">Activează contul</string>
    <string name="register_error_message_invalid_phone_number">Formatul numărului introdus nu este valid (ex. 07XXXXXXXX)</string>
    <string name="register_error_message_min_characters_username">Numele de utilizator trebuie să conţină cel puţin 4 caractere.</string>
    <string name="register_error_message_invalid_characters_username">Diacritice și caractere speciale nu sunt permise.</string>
    <string name="register_error_message_terms_checkbox">Pentru a continua este necesar să fii de acord cu termenii și condițiile.</string>
    <string name="register_error_message_email_address">Te rugăm să introduci un email valid!</string>
    <string name="register_error_message_register_password">Parola trebuie să fie de minimum 8 caractere, să conțină cifre, litere mari și mici.</string>
    <string name="register_error_message_confirm_password">Câmpurile nu coincid.</string>
    <string name="confirm_profile_tittle_label">Confirmare profil</string>
    <string name="confirm_profile_first_step_page_tittle_label">Avem nevoie de datele tale pentru a-ți putea confirma profilul.\u00A0</string>
    <string name="confirm_profile_dialog_positive">Renunță</string>
    <string name="confirm_profile_telephone_number_hint">0xxxxxxxxx</string>
    <string name="recover_username_telephone_number_label">Număr de telefon</string>
    <string name="recover_username_telephone_number_hint">0xxxxxxxxx</string>
    <string name="recover_username_email_adress_label">Adresă de e-mail</string>
    <string name="recover_username_email_adress_hint">nume@exemplu.com</string>
    <string name="recover_username_button_label">Trimite numele de utilizator</string>
    <string name="add_button_text">Salvează</string>
    <string name="title_add_to_favorites">Adaugă un număr \nfavorit</string>
    <string name="message_add_to_favorites">Te rugăm să introduci numele.</string>
    <string name="hint_number">0720000000</string>
    <string name="hint_name">Nume</string>
    <string name="message_information">Vom afișa numele ("spre exemplu, 'Andrei (0720000000)'") și numărul de telefon astfel încât să fie mai ușor de identificat.</string>
    <string name="your_services_details_service_label">Serviciu</string>
    <string name="your_services_details_cost_label">Cost (lunar):</string>
    <string name="your_services_details_duration_label">Durată:</string>
    <string name="your_services_details_start_date">De la %1$s</string>
    <string name="your_services_details_end_date">Până la %1$s</string>
    <string name="item_my_cards">Cardurile mele</string>
</resources>