<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customAttrs="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <ro.vodafone.mcare.android.ui.views.textviews.VodafoneTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/your_services_details_service_label"
            android:textColor="@color/dark_gray_text_color"
            android:textSize="18sp"
            customAttrs:vodafoneTextStyle="vodafoneRGBD" />

        <ro.vodafone.mcare.android.ui.views.textviews.VodafoneTextView
            android:id="@+id/service_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Spotify"
            android:textColor="@color/dark_gray_text_color"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <ro.vodafone.mcare.android.ui.views.textviews.VodafoneTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/your_services_details_cost_label"
            android:textColor="@color/dark_gray_text_color"
            android:textSize="18sp"
            customAttrs:vodafoneTextStyle="vodafoneRGBD" />

        <ro.vodafone.mcare.android.ui.views.textviews.VodafoneTextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Spotify"
            android:textColor="@color/dark_gray_text_color"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/service_duration_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">


        <ro.vodafone.mcare.android.ui.views.textviews.VodafoneTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/your_services_details_duration_label"
            android:textColor="@color/dark_gray_text_color"
            android:textSize="18sp"
            customAttrs:vodafoneTextStyle="vodafoneRGBD" />

        <ro.vodafone.mcare.android.ui.views.textviews.VodafoneTextView
            android:id="@+id/service_days_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="6 luni"
            android:textColor="@color/dark_gray_text_color"
            android:textSize="16sp" />

        <ro.vodafone.mcare.android.ui.views.textviews.VodafoneTextView
            android:id="@+id/service_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_services_details_start_date"
            android:textColor="@color/dark_gray_text_color"
            android:textSize="16sp" />

        <ro.vodafone.mcare.android.ui.views.textviews.VodafoneTextView
            android:id="@+id/service_end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_services_details_end_date"
            android:textColor="@color/dark_gray_text_color"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>