<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:customAttrs="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overlay_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/overlay_regular_border"
    android:paddingLeft="@dimen/overlay_regular_border"
    android:paddingRight="@dimen/overlay_regular_border"
    android:paddingTop="@dimen/overlay_regular_border">

    <!--Header-->
    <RelativeLayout
        android:id="@+id/select_dialog_tittle_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/overlayDismissButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:clickable="true"
            android:src="@drawable/close_48_white" />

        <ro.vodafone.mcare.android.ui.views.textviews.VodafoneTextView
            android:id="@+id/overlayTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:text="@string/title_add_to_favorites"
            android:textColor="@color/pay_bill_white_color"
            android:textSize="@dimen/overlay_title_text_size"
            customAttrs:vodafoneTextStyle="vodafoneRG" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/input_container"
        android:layout_below="@id/select_dialog_tittle_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/overlay_second_border"
        android:paddingEnd="@dimen/overlay_second_border"
        android:paddingTop="@dimen/overlay_second_border"
        android:orientation="vertical">

        <ro.vodafone.mcare.android.ui.views.textviews.VodafoneTextView
            android:id="@+id/vodafoneTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/message_add_to_favorites"
            android:textColor="@color/pay_bill_white_color"
            android:textSize="@dimen/text_size"
            customAttrs:vodafoneTextStyle="vodafoneRG" />

        <ro.vodafone.mcare.android.custom.CustomEditText
            android:id="@+id/phone_number_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_page_view_elements_height"
            android:background="@drawable/default_input_border"
            android:editable="false"
            android:hint="@string/hint_number"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:textColorHint="@color/gray_input_text"
            android:textSize="@dimen/login_page_labels_text_size"
            customAttrs:type="login" />

        <ro.vodafone.mcare.android.custom.CustomEditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_page_view_elements_height"
            android:background="@drawable/default_input_border"
            android:hint="@string/hint_name"
            android:maxLength="20"
            android:maxLines="1"
            android:inputType="text"
            android:paddingLeft="14dp"
            android:layout_marginTop="10dp"
            android:paddingRight="14dp"
            android:textColorHint="@color/gray_input_text"
            android:textSize="@dimen/login_page_labels_text_size"
            customAttrs:type="login" />


    </LinearLayout>

    <!--Bottom-->

    <ro.vodafone.mcare.android.ui.views.buttons.VodafoneButton
        android:id="@+id/buttonAddToFavorites"
        style="@style/OverlayPrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:enabled="false"
        android:text="@string/add_button_text"
        android:textSize="@dimen/medium_text_size"
        android:layout_marginStart="@dimen/overlay_second_border"
        android:layout_marginEnd="@dimen/overlay_second_border"
        android:layout_below="@+id/input_container"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />



        <ro.vodafone.mcare.android.ui.views.textviews.VodafoneTextView
            android:id="@+id/overlayDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/overlay_regular_border"
            android:layout_marginEnd="@dimen/overlay_regular_border"
            android:gravity="center"
            android:layout_below="@id/buttonAddToFavorites"
            android:text="@string/message_information"
            android:textColor="@color/gray_input_text"
            android:textSize="@dimen/pay_bill_litle_text_size"
            customAttrs:vodafoneTextStyle="vodafoneRG" />


</RelativeLayout>